feat(api): thêm endpoint /user/me để trả về thông tin người dùng hiện tại

--- a/backend/.env
+++ b/backend/.env
@@ -10,3 +10,7 @@ GOOGLE_REDIRECT_URI=http://localhost:8000/auth/google/callback
 GITHUB_CLIENT_ID=Ov23li28PwzdpzNNTzgi
 GITHUB_CLIENT_SECRET=7f7f15bf09a49558aa1b1638ea44985e0b92e60c
 GITHUB_REDIRECT_URI=http://localhost:8000/auth/github/callback
+
+FRONTEND_ORIGIN = "http://localhost:5173"
+
+BACKEND_URL= "http://localhost:8000"
